--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>System Alert</title>
+  <title>!! SISTEM ANDA TELAH DIRETAS !!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="terminal"></div>
+  <div class="overlay">
+    <div id="terminal"></div>
+  </div>
 
-  <audio id="scream" preload="auto">
-    <source src="https://www.myinstants.com/media/sounds/scream.mp3" type="audio/mpeg">
+  <audio id="alarm" preload="auto">
+    <source src="https://cdn.pixabay.com/audio/2022/03/23/audio_7c5e956b02.mp3" type="audio/mpeg">
   </audio>
 
   <script src="script.js"></script>
